@@ -1,14 +1,15 @@
-copyright.o copyright_mpi.o copyright_pvm.o copyright copyright_mpi copyright_pvm: $(top_srcdir)/looper/copyright.h
-percolation.o percolation_mpi.o percolation_pvm.o percolation percolation_mpi percolation_pvm: $(srcdir)/percolation_impl.h $(top_srcdir)/looper/copyright.h $(top_srcdir)/./looper/union_find.h
-percolation_cmd.o percolation_cmd_mpi.o percolation_cmd_pvm.o percolation_cmd percolation_cmd_mpi percolation_cmd_pvm: $(srcdir)/percolation_impl.h $(top_srcdir)/looper/copyright.h $(top_srcdir)/./looper/union_find.h $(top_srcdir)/./looper/graph.h
-qmc.o qmc_mpi.o qmc_pvm.o qmc qmc_mpi qmc_pvm: $(srcdir)/qmc_impl.h $(top_srcdir)/looper/copyright.h $(top_srcdir)/./looper/model.h $(top_srcdir)/./looper/graph.h $(top_srcdir)/./looper/virtual_graph.h $(top_srcdir)/./looper/xxz.h $(top_srcdir)/./looper/path_integral.h $(top_srcdir)/./looper/amida.h $(top_srcdir)/./looper/vector_helper.h $(top_srcdir)/./looper/fill_duration.h $(top_srcdir)/./looper/node.h $(top_srcdir)/./looper/union_find.h $(top_srcdir)/./looper/permutation.h $(top_srcdir)/./looper/weight.h $(top_srcdir)/./looper/random_choice.h $(top_srcdir)/./looper/sse.h $(top_srcdir)/./looper/measurement.h
-qmc_cmd.o qmc_cmd_mpi.o qmc_cmd_pvm.o qmc_cmd qmc_cmd_mpi qmc_cmd_pvm: $(srcdir)/qmc_impl.h $(top_srcdir)/looper/copyright.h $(top_srcdir)/./looper/model.h $(top_srcdir)/./looper/graph.h $(top_srcdir)/./looper/virtual_graph.h $(top_srcdir)/./looper/xxz.h $(top_srcdir)/./looper/path_integral.h $(top_srcdir)/./looper/amida.h $(top_srcdir)/./looper/vector_helper.h $(top_srcdir)/./looper/fill_duration.h $(top_srcdir)/./looper/node.h $(top_srcdir)/./looper/union_find.h $(top_srcdir)/./looper/permutation.h $(top_srcdir)/./looper/weight.h $(top_srcdir)/./looper/random_choice.h $(top_srcdir)/./looper/sse.h $(top_srcdir)/./looper/measurement.h
+copyright.o copyright_mpi.o copyright_pvm.o copyright copyright_mpi copyright_pvm: $(top_srcdir)/looper/copyright.h $(top_srcdir)/./looper/config.h
+percolation.o percolation_mpi.o percolation_pvm.o percolation percolation_mpi percolation_pvm: $(srcdir)/percolation_impl.h $(top_srcdir)/looper/copyright.h $(top_srcdir)/./looper/config.h $(top_srcdir)/./looper/union_find.h
+percolation_cmd.o percolation_cmd_mpi.o percolation_cmd_pvm.o percolation_cmd percolation_cmd_mpi percolation_cmd_pvm: $(srcdir)/percolation_impl.h $(top_srcdir)/looper/copyright.h $(top_srcdir)/./looper/config.h $(top_srcdir)/./looper/union_find.h $(top_srcdir)/./looper/graph.h
+qmc.o qmc_mpi.o qmc_pvm.o qmc qmc_mpi qmc_pvm: $(srcdir)/qmc_impl.h $(top_srcdir)/looper/copyright.h $(top_srcdir)/./looper/config.h $(top_srcdir)/./looper/model.h $(top_srcdir)/./looper/graph.h $(top_srcdir)/./looper/virtual_graph.h $(top_srcdir)/./looper/xxz.h $(top_srcdir)/./looper/path_integral.h $(top_srcdir)/./looper/amida.h $(top_srcdir)/./looper/vector_helper.h $(top_srcdir)/./looper/fill_duration.h $(top_srcdir)/./looper/node.h $(top_srcdir)/./looper/union_find.h $(top_srcdir)/./looper/permutation.h $(top_srcdir)/./looper/weight.h $(top_srcdir)/./looper/random_choice.h $(top_srcdir)/./looper/sse.h $(top_srcdir)/./looper/measurement.h
+qmc_cmd.o qmc_cmd_mpi.o qmc_cmd_pvm.o qmc_cmd qmc_cmd_mpi qmc_cmd_pvm: $(srcdir)/qmc_impl.h $(top_srcdir)/looper/copyright.h $(top_srcdir)/./looper/config.h $(top_srcdir)/./looper/model.h $(top_srcdir)/./looper/graph.h $(top_srcdir)/./looper/virtual_graph.h $(top_srcdir)/./looper/xxz.h $(top_srcdir)/./looper/path_integral.h $(top_srcdir)/./looper/amida.h $(top_srcdir)/./looper/vector_helper.h $(top_srcdir)/./looper/fill_duration.h $(top_srcdir)/./looper/node.h $(top_srcdir)/./looper/union_find.h $(top_srcdir)/./looper/permutation.h $(top_srcdir)/./looper/weight.h $(top_srcdir)/./looper/random_choice.h $(top_srcdir)/./looper/sse.h $(top_srcdir)/./looper/measurement.h
 test/amida.o test/amida_mpi.o test/amida_pvm.o test/amida test/amida_mpi test/amida_pvm: $(top_srcdir)/./looper/amida.h $(top_srcdir)/./looper/vector_helper.h
 test/fill_duration.o test/fill_duration_mpi.o test/fill_duration_pvm.o test/fill_duration test/fill_duration_mpi test/fill_duration_pvm: $(top_srcdir)/./looper/fill_duration.h
 test/hypercubic_graph_generator.o test/hypercubic_graph_generator_mpi.o test/hypercubic_graph_generator_pvm.o test/hypercubic_graph_generator test/hypercubic_graph_generator_mpi test/hypercubic_graph_generator_pvm: $(top_srcdir)/./looper/graph.h
 test/index_helper.o test/index_helper_mpi.o test/index_helper_pvm.o test/index_helper test/index_helper_mpi test/index_helper_pvm: $(top_srcdir)/./looper/vector_helper.h
 test/permutation.o test/permutation_mpi.o test/permutation_pvm.o test/permutation test/permutation_mpi test/permutation_pvm: $(top_srcdir)/./looper/permutation.h
 test/random_choice.o test/random_choice_mpi.o test/random_choice_pvm.o test/random_choice test/random_choice_mpi test/random_choice_pvm: $(top_srcdir)/./looper/random_choice.h
+test/syev.o test/syev_mpi.o test/syev_pvm.o test/syev test/syev_mpi test/syev_pvm: $(top_srcdir)/./looper/lapack.h $(top_srcdir)/./looper/config.h
 test/union_find.o test/union_find_mpi.o test/union_find_pvm.o test/union_find test/union_find_mpi test/union_find_pvm: $(top_srcdir)/./looper/union_find.h
 test/virtual_graph.o test/virtual_graph_mpi.o test/virtual_graph_pvm.o test/virtual_graph test/virtual_graph_mpi test/virtual_graph_pvm: $(top_srcdir)/./looper/graph.h $(top_srcdir)/./looper/virtual_graph.h
 test/weight.o test/weight_mpi.o test/weight_pvm.o test/weight test/weight_mpi test/weight_pvm: $(top_srcdir)/./looper/xxz.h $(top_srcdir)/./looper/weight.h $(top_srcdir)/./looper/random_choice.h
