@@ -40,7 +40,8 @@ struct options {
   uint32_t step_t;              // -m MCS for thermalization
   uint32_t step_m;              // -n MCS for measurement
   std::string representation;   // -e use SSE instead of path integral
-  
+                                // -g use exact diagonalization
+
   options(int argc, char *argv[]) : 
     // default options
     seed(2837), dim(1), lsize(16), spin(0.5), Jxy(-1.), Jz(-1.), temp(1.),
@@ -61,6 +62,7 @@ struct options {
        << "  -m int     MCS for thermalization\n"
        << "  -n int     MCS for measurement\n"
        << "  -e         use SSE representation instead of path-integral one\n"
+       << "  -g         use exact diagonalization instead of QMC\n"
        << "  -h         this help\n\n";
     if (status) {
       boost::throw_exception(std::invalid_argument("Invalid command line option(s)"));
@@ -113,6 +115,9 @@ struct options {
         case 'e' :
 	  representation = "SSE";
           break;
+        case 'g' :
+	  representation = "exact diagonalization";
+          break;
 	case 'h' :
 	  usage(0);
 	  break;
@@ -139,8 +144,14 @@ struct options {
        << Jz << ' '
        << temp << ' '
        << step_t << ' '
-       << step_m << ' '
-       << (representation == "path integral" ? "PI" : "SSE");
+       << step_m << ' ';
+    if (representation == "path integral") {
+      os << "PI";
+    } else if (representation == "SSE") {
+      os << "SSE";
+    } else {
+      os << "ED";
+    }
   }
 };
 
@@ -159,17 +170,17 @@ try {
     "qmc_cmd: a command-line QMC program for simple hypercubic lattices\n\n";
 
   // simulation parameters
-  std::cout << "r: seed for RNG           : " << opts.seed << std::endl
-	    << "d: spatial dimension      : " << opts.dim << std::endl
-	    << "l: linear size            : " << opts.lsize << std::endl
-	    << "s: spin size S            : " << opts.spin << std::endl
-	    << "x: coupling Jxy           : " << opts.Jxy << std::endl
-	    << "z: doupling Jz            : " << opts.Jz << std::endl
-	    << "t: temperature            : " << opts.temp << std::endl
-	    << "m: MCS for thermalization : " << opts.step_t << std::endl
-	    << "n: MCS for measurement    : " << opts.step_m << std::endl
-	    << "e: representation         : " << opts.representation << std::endl
-	    << std::endl;
+  std::cout << "r:   seed for RNG           : " << opts.seed << std::endl
+	    << "d:   spatial dimension      : " << opts.dim << std::endl
+	    << "l:   linear size            : " << opts.lsize << std::endl
+	    << "s:   spin size S            : " << opts.spin << std::endl
+	    << "x:   coupling Jxy           : " << opts.Jxy << std::endl
+	    << "z:   doupling Jz            : " << opts.Jz << std::endl
+	    << "t:   temperature            : " << opts.temp << std::endl
+	    << "m:   MCS for thermalization : " << opts.step_t << std::endl
+	    << "n:   MCS for measurement    : " << opts.step_m << std::endl
+	    << "e,g: representation         : " << opts.representation
+	    << std::endl << std::endl;
 
   // random number generator
   boost::mt19937 base_rng;
@@ -187,46 +198,61 @@ try {
   typedef looper::xxz_model model_type;
   model_type model(opts.Jxy, opts.Jz, opts.spin, g);
 
-  // measurements
-  alps::ObservableSet measurements;
-
-  if (opts.representation == "path integral") {
-    // path-integral representation
-    qmc_worker<looper::path_integral<looper::virtual_graph<graph_type>,
-      model_type> > worker(g, model, 1./opts.temp, measurements);
-
-    for (int mcs = 0; mcs < opts.step_t + opts.step_m; ++mcs) {
-      if (mcs == opts.step_t) measurements.reset(true);
-      worker.step(rng, measurements);
+  if (opts.representation == "path integral" ||
+      opts.representation == "SSE") {
+    
+    // random number generator
+    boost::mt19937 base_rng;
+    boost::uniform_01<boost::mt19937> rng(base_rng);
+    rng.base().seed(boost::mt19937::result_type(opts.seed));
+    for (int i = 0; i < 19844; ++i) rng();
+    
+    // measurements
+    alps::ObservableSet measurements;
+    
+    if (opts.representation == "path integral") {
+      // path-integral representation
+      qmc_worker<looper::path_integral<looper::virtual_graph<graph_type>,
+	model_type> > worker(g, model, 1./opts.temp, measurements);
+      
+      for (int mcs = 0; mcs < opts.step_t + opts.step_m; ++mcs) {
+	if (mcs == opts.step_t) measurements.reset(true);
+	worker.step(rng, measurements);
+      }
+      
+      worker.accumulate(measurements);
+      
+      std::cout << measurements << std::endl; 
+      opts.output();
+      std::cout << ' ';
+      worker.output_results(std::cout, measurements);
+      std::cout << std::endl;
+    } else {
+      // SSE representation
+      qmc_worker<looper::sse<looper::virtual_graph<graph_type>,
+	model_type> > worker(g, model, 1./opts.temp, measurements);
+      
+      for (int mcs = 0; mcs < opts.step_t + opts.step_m; ++mcs) {
+	if (mcs == opts.step_t) measurements.reset(true);
+	worker.step(rng, measurements);
+      }
+      
+      worker.accumulate(measurements);
+      
+      std::cout << measurements << std::endl; 
+      opts.output();
+      std::cout << ' ';
+      worker.output_results(std::cout, measurements);
+      std::cout << std::endl;
     }
-
-    worker.accumulate(measurements);
-
-    std::cout << measurements << std::endl; 
-    opts.output();
-    std::cout << ' ';
-    worker.output_results(std::cout, measurements);
-    std::cout << std::endl;
   } else {
-    // SSE representation
-    qmc_worker<looper::sse<looper::virtual_graph<graph_type>,
-      model_type> > worker(g, model, 1./opts.temp, measurements);
-
-    for (int mcs = 0; mcs < opts.step_t + opts.step_m; ++mcs) {
-      if (mcs == opts.step_t) measurements.reset(true);
-      worker.step(rng, measurements);
-    }
-
-    worker.accumulate(measurements);
-
-    std::cout << measurements << std::endl; 
-    opts.output();
-    std::cout << ' ';
-    worker.output_results(std::cout, measurements);
-    std::cout << std::endl;
+    // exact diagonalization
+    typedef looper::exact_diagonalization<graph_type, model_type> ed_type;
+    ed_type::parameter_type p(g, model, 1./opts.temp);
+    ed_type::config_type c;
+    ed_type::generate_matrix(p, c);
+    ed_type::diagonalize(p, c);
   }
-
-  // output results
 
 #ifndef BOOST_NO_EXCEPTIONS
 } 
