@@ -22,7 +22,7 @@
 *
 *****************************************************************************/
 
-// $Id: qmc_impl.h 554 2003-11-12 02:36:24Z wistaria $
+// $Id: qmc_impl.h 558 2003-11-12 14:02:13Z wistaria $
 // qmc_impl.h - implementation of worker for QMC simulation
 
 #ifndef QMC_IMPL_H
@@ -33,6 +33,7 @@
 #include <looper/path_integral.h>
 #include <looper/sse.h>
 #include <looper/measurement.h>
+#include <looper/exact_diagonalization.h>
 
 #include <alps/alea.h>
 #include <alps/scheduler.h>
