@@ -1,6 +1,9 @@
 2003-11-12  Synge Todo  <wistaria@comp-phys.org>
 
 	* Updated copyright and file headers and added program `copyright'.
+
+	* Added exact diagonalization code (from dpQLM) for checking QMC
+	results.
 	
 2003-11-07  Synge Todo  <wistaria@comp-phys.org>
 	
